---------------------------------------------------------------------------------------------------
Version: 0.69.104
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.103
Date: 2025-08-18
  Changes:
    - Fixed undo bug. I need to do more testing, with potential edits due to a wube bug. You may notice weirdness with undo calls around Rubia.
    - Paracelsin compat fix.
---------------------------------------------------------------------------------------------------
Version: 0.69.102
Date: 2025-08-17
  Changes:
    - Fixed bullet range issues for Krastorio 2 Spaced Out (again, again! Third time is the charm). Bullets lost their hitbox on distant targets for long range turrets, if weapons are set to "Realistic" mode. I'm putting out this fix for Rubian sniper turrets, but this also fixes issues within K2SO related to quality (as a side effect). Thanks to Protonel for figuring this out.
    - Quick train fix.
---------------------------------------------------------------------------------------------------
Version: 0.69.101
Date: 2025-08-16
  Changes:
    - Weather particle effects added. With code/particles adapted from Varaxia's Celestial Weather mod.
    - Added compat for Krastorio 2 spaced out when BZ Tin is installed at the same time. (Why are you people installing multiple overhauls at once!?)
---------------------------------------------------------------------------------------------------
Version: 0.69.100
Date: 2025-08-15
  Changes:
    - New main menu simulations!
---------------------------------------------------------------------------------------------------
Version: 0.69.99
Date: 2025-08-14
  Changes:
    - Crapapult speed nerf: void 245/s => 100/s. The net effect is: 1) Normal crapapult voids a nice round 100/s. 2) Voiding a stacked green belt now needs a legendary crapapult, as a normal crapapult will not be enough. Most users will not notice much difference.