@@ -443,6 +443,7 @@ train-stop-mine-part5=Under this train stop, you find a tattered book: "Anomancy
 train-stop-mine-part5-2=After skimming through a few pages, the wind tears it from your hands. You wonder if you could find a new copy online.
 train-stop-mine-part6=There is a recording trapped in this wreckage, but it's indecipherable. You transmit the data back to your main base for analysis.
 train-stop-mine-part6-2=Analysis is complete on the recording you found earlier. The records indicate the construction of a massive rail line designed to reach the "end of the world". It is unclear whether or not "Zyl□□□□" was successful.
+train-stop-mine-part7=You find a cache of documents proposing technologies to invalidate wind. Streaks of fecal matter are smeared across them, likely from an irritated recipient.
 train-stop-gun-turret-trap=Rummaging through junk, you find a gun turret under the rubble marked: "□□□□erty of Bob". Your fumbling makes it spring to life.
 
 
